// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`polarDistance renders 0 1`] = `
Array [
  .c0 {
  polar-distance: 0;
}

<div
    className="c0"
  />,
  .c0 {
  polar-distance: 0;
}

<div
    className="c0"
  />,
  .c0 {
  polar-distance: 0;
}

<div
    className="c0"
  />,
  .c0 {
  polar-distance: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`polarDistance renders function 1`] = `
Array [
  .c0 {
  polar-distance: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  polar-distance: has;
}

<div
    className="c0"
  />,
  .c0 {
  polar-distance: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  polar-distance: has;
}

<div
    className="c0"
  />,
]
`;

exports[`polarDistance renders invalid theme path 1`] = `
Array [
  .c0 {
  polar-distance: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  polar-distance: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  polar-distance: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  polar-distance: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`polarDistance renders negative number 1`] = `
Array [
  .c0 {
  polar-distance: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  polar-distance: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  polar-distance: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  polar-distance: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`polarDistance renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    polar-distance: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    polar-distance: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    polar-distance: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    polar-distance: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    polar-distance: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    polar-distance: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    polar-distance: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    polar-distance: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    polar-distance: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    polar-distance: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    polar-distance: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    polar-distance: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    polar-distance: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    polar-distance: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    polar-distance: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    polar-distance: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`polarDistance renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    polar-distance: July;
  }
}

@media April {
  .c0 {
    polar-distance: August;
  }
}

@media January {
  .c0 {
    polar-distance: September;
  }
}

@media April {
  .c0 {
    polar-distance: November;
  }
}

@media June {
  .c0 {
    polar-distance: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    polar-distance: July;
  }
}

@media April {
  .c0 {
    polar-distance: August;
  }
}

@media January {
  .c0 {
    polar-distance: September;
  }
}

@media April {
  .c0 {
    polar-distance: November;
  }
}

@media June {
  .c0 {
    polar-distance: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    polar-distance: January;
  }
}

@media April {
  .c0 {
    polar-distance: December;
  }
}

@media January {
  .c0 {
    polar-distance: April;
  }
}

@media April {
  .c0 {
    polar-distance: May;
  }
}

@media June {
  .c0 {
    polar-distance: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    polar-distance: January;
  }
}

@media April {
  .c0 {
    polar-distance: December;
  }
}

@media January {
  .c0 {
    polar-distance: April;
  }
}

@media April {
  .c0 {
    polar-distance: May;
  }
}

@media June {
  .c0 {
    polar-distance: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`polarDistance renders postitive number 1`] = `
Array [
  .c0 {
  polar-distance: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  polar-distance: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  polar-distance: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  polar-distance: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`polarDistance renders string 1`] = `
Array [
  .c0 {
  polar-distance: July;
}

<div
    className="c0"
  />,
  .c0 {
  polar-distance: July;
}

<div
    className="c0"
  />,
  .c0 {
  polar-distance: June;
}

<div
    className="c0"
  />,
  .c0 {
  polar-distance: June;
}

<div
    className="c0"
  />,
]
`;

exports[`polarDistance renders valid theme path 1`] = `
Array [
  .c0 {
  polar-distance: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  polar-distance: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  polar-distance: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  polar-distance: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
